removed min-width of the footer in the general css file. this should fix footer look and automatic wrap without using @media

--- a/source/assets/css/_general.scss
+++ b/source/assets/css/_general.scss
@@ -87,7 +87,7 @@ nav {
 }
 
 footer {
-  min-width: 800px;
+  //min-width: 800px;
   font-size: 14px;
   border-top: 1px solid $footer-line-color;
   // box-shadow: 0 0 1px rgba(0, 0, 0, 0.05) !important;
